Fixed: if the content table is too large the lower links are not visible on the screen; Added autoscrolling to ensure that the currently active link is always in view

--- a/src/management-system-v2/app/shared-viewer/bpmn-shared-viewer.module.scss
+++ b/src/management-system-v2/app/shared-viewer/bpmn-shared-viewer.module.scss
@@ -62,8 +62,10 @@
     }
 
     .ContentTableCol {
+      height: 100%;
       max-width: 320px;
       padding: 0 10px 0 0;
+      overflow-y: hidden;
 
       @media print {
         display: none;
